k8s/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: bookstore-catalog-service
  template:
    metadata:
      labels:
        app: bookstore-catalog-service
    spec:
      containers:
      - name: catalog
        image: d1ff1c1le/bookstore-catalog-service:latest
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "300m"
          limits:
            memory: "3Gi"
            cpu: "500m"
        ports:
        - containerPort: 6001
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 6001
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 6001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-catalog-service
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 6001
      targetPort: 6001
      nodePort: 30006
  selector:
    app: bookstore-catalog-service
