k8s/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server-deployment
  namespace: bookstore
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: d1ff1c1le/bookstore-eureka-discovery-service:latest # Ensure this matches your Docker Hub username and image name
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-service # This name is used by EUREKA_INSTANCE_HOSTNAME
  namespace: bookstore
  labels:
    app: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
  - name: http
    protocol: TCP
    port: 8761
    targetPort: 8761
  type: ClusterIP # Or LoadBalancer if you need to expose it externally directly, though usually not for Eureka
