k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-grafana
  namespace: bookstore
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bookstore-grafana
  template:
    metadata:
      labels:
        app: bookstore-grafana
    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsNonRoot: true
      containers:
      - name: grafana
        image: grafana/grafana:latest
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 150m
            memory: 256Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-dashboards-provisioning
          mountPath: /etc/grafana/provisioning/dashboards
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc
      - name: grafana-datasources
        configMap:
            name: grafana-datasources
      - name: grafana-dashboards
        configMap:
            name: grafana-dashboards
      - name: grafana-dashboards-provisioning
        configMap:
            name: grafana-dashboards-provisioning
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-grafana
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30011
  selector:
    app: bookstore-grafana
