k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-mysql-db
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-mysql-db
  template:
    metadata:
      labels:
        app: bookstore-mysql-db
    spec:
      containers:
      - name: mysql
        image: mariadb:10.5
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-mysql-db
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30001
  selector:
    app: bookstore-mysql-db
