k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: bookstore-payment-service
  template:
    metadata:
      labels:
        app: bookstore-payment-service
    spec:
      containers:
      - name: payment
        image: d1ff1c1le/bookstore-payment-service:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "200m"
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8001
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-payment-service
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30008
  selector:
    app: bookstore-payment-service
