k8s/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-prometheus
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-prometheus
  template:
    metadata:
      labels:
        app: bookstore-prometheus
    spec:
      containers:
      - name: prometheus
        image: d1ff1c1le/bookstore-prometheus:latest
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-prometheus
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30010
  selector:
    app: bookstore-prometheus
