k8s/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-zipkin
  namespace: bookstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-zipkin
  template:
    metadata:
      labels:
        app: bookstore-zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        ports:
        - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-zipkin
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 9411
      targetPort: 9411
      nodePort: 30009
  selector:
    app: bookstore-zipkin
