k8s/zuul-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-zuul-api-gateway-server
  namespace: bookstore
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
  selector:
    matchLabels:
      app: bookstore-zuul-api-gateway-server
  template:
    metadata:
      labels:
        app: bookstore-zuul-api-gateway-server
    spec:
      containers:
      - name: zuul
        image: d1ff1c1le/bookstore-api-gateway-service:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "200m"
        ports:
        - containerPort: 8765
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8765
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8765
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-zuul-api-gateway-server
  namespace: bookstore
spec:
  type: NodePort
  ports:
    - port: 8765
      targetPort: 8765
      nodePort: 30003
  selector:
    app: bookstore-zuul-api-gateway-server
